@@ -4,6 +4,7 @@
 @SETTING_DEFAULT_MENU@=@DEFAULT_MENU@
 @SETTING_VSYNC@=@DEFAULT_VSYNC@
 #@SETTING_FPS_LIMIT@=
+#@SETTING_APPLICATION_TIMEOUT@=@DEFAULT_APPLICATION_TIMEOUT@
 @SETTING_ON_LAUNCH@=@DEFAULT_ON_LAUNCH@
 @SETTING_RESET_ON_BACK@=@DEFAULT_RESET_ON_BACK@
 @SETTING_MOUSE_SELECT@=@DEFAULT_MOUSE_SELECT@
