@@ -3,6 +3,7 @@ set(SETTING_DEFAULT_MENU "DefaultMenu")
 set(SETTING_MAX_BUTTONS "MaxButtons")
 set(SETTING_VSYNC "VSync")
 set(SETTING_FPS_LIMIT "FPSLimit")
+set(SETTING_APPLICATION_TIMEOUT "ApplicationTimeout")
 set(SETTING_BACKGROUND_MODE "Mode")
 set(SETTING_BACKGROUND_COLOR "Color")
 set(SETTING_BACKGROUND_IMAGE "Image")
@@ -95,6 +96,7 @@ set(SETTING_GAMEPAD_BUTTON_DPAD_RIGHT "ButtonDPadRight")
 set(DEFAULT_MENU "Main")
 set(DEFAULT_MAX_BUTTONS 4)
 set(DEFAULT_VSYNC "true")
+set(DEFAULT_APPLICATION_TIMEOUT "7")
 set(DEFAULT_BACKGROUND_MODE "Color")
 set(DEFAULT_BACKGROUND_COLOR_R "00")
 set(DEFAULT_BACKGROUND_COLOR_G "00")
