@@ -35,6 +35,7 @@
 #define SETTING_MAX_BUTTONS "@SETTING_MAX_BUTTONS@"
 #define SETTING_VSYNC "@SETTING_VSYNC@"
 #define SETTING_FPS_LIMIT "@SETTING_FPS_LIMIT@"
+#define SETTING_APPLICATION_TIMEOUT "@SETTING_APPLICATION_TIMEOUT@"
 #define SETTING_BACKGROUND_MODE "@SETTING_BACKGROUND_MODE@"
 #define SETTING_BACKGROUND_IMAGE "@SETTING_BACKGROUND_IMAGE@"
 #define SETTING_BACKGROUND_COLOR "@SETTING_BACKGROUND_COLOR@"
@@ -126,6 +127,7 @@
 // Config file default settings
 #define DEFAULT_MAX_BUTTONS @DEFAULT_MAX_BUTTONS@
 #define DEFAULT_VSYNC @DEFAULT_VSYNC@
+#define DEFAULT_APPLICATION_TIMEOUT @DEFAULT_APPLICATION_TIMEOUT@
 #define DEFAULT_BACKGROUND_COLOR_R 0x@DEFAULT_BACKGROUND_COLOR_R@
 #define DEFAULT_BACKGROUND_COLOR_G 0x@DEFAULT_BACKGROUND_COLOR_G@
 #define DEFAULT_BACKGROUND_COLOR_B 0x@DEFAULT_BACKGROUND_COLOR_B@
