@@ -1,3 +1,6 @@
+Unreleased
+- Make application timeout configurable
+
 v2.1 (2023-1-7)
 - Added OnLaunch 'Quit' mode
 
